<resources>
    <string name="app_name">Stonks</string>

    <string name="registerExpense">Registrar gasto</string>
    <string name="registerWallet">Registrar billetera</string>
    <string name="viewMovements">Ver gastos</string>
    <string name="logout">Logout</string>

    <string name="description">Descripción</string>
    <string name="name">Nombre</string>
    <string name="mount">Monto</string>
    <string name="initialAmount">Monto inicial</string>
    <string name="register">Registrar</string>
    <string name="title_activity_wallets_list">WalletsList</string>
    <string name="movement_amount">$%1$f</string>

    <string name="username_email">Username or email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>


</resources>