<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:background="@drawable/background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:layout_marginVertical="32sp"
        app:layout_constraintBaseline_toBottomOf="parent"
        />


    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/username_email"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:inputType="text"
        android:autofillHints="username"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        />

    <LinearLayout
         android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="50"
            android:text="@string/login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="48dp"
            android:text="@string/signup"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_margin="10dp"
            />

    </LinearLayout>



</LinearLayout>