<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterWallet"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tvRegisterWallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerWallet"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginVertical="32sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_baseline_description_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterWallet"/>

    <EditText
        android:id="@+id/etInitialAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_baseline_attach_money_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/initialAmount"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <Button
        android:id="@+id/btnRegisterWallet"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/register"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/etInitialAmount"
        />


</androidx.constraintlayout.widget.ConstraintLayout>